<resources>
    <string name="app_name">Jami3aty</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="login_string">Login</string>
    <string name="forget_password_string">Forgot Password ?</string>
    <string name="back">background Image</string>
    <string name="sign_up">Create an Account</string>
    <string name="or">OR</string>
    <string name="valid_email">Invalid email</string>
    <string name="valid_card_number">Invalid Card Number</string>
    <string name="password_empty">An password is required</string>
    <string name="card_number_empty">An card number is required</string>
    <string name="email_empty">An email is required</string>
    <string name="valid_password">At least 8 characters</string>
    <string name="bac_average_empty">An date is required</string>
    <string name="bac_average_invalid">Invalid average</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="action_help">Help</string>
    <string name="card_number_string">Card Number</string>
    <string name="title_activity_help">Help</string>
    <string name="card_number_help">This number is the register number in the University, you can get it by viewing your student card under the registration number which compose of Two numbers xxxxxxx/xx , the first 8 numbers is your number</string>
    <string name="password_help">Try to use a password more complex for your security , you are oblige to use a password compose from 8 characters, you can use the Upper case letters , symbol as much you like.</string>
    <string name="email_help">you can use gmail , Yahoo , microsoft or any email you like , this email will be used for activating your account and for reinstall the password in the case you lost it.</string>
    <string name="welcome_in_help">Welcome In Help</string>
    <string name="student_card_description">Student card in which we are demonstrating from where to get the card number</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="account_search">Please enter your email to search your account</string>
    <string name="find_your_account_text">Find your account</string>
    <string name="logo_image_description">Logo image</string>
    <string name="bac_average_string">Bac average</string>
    <string name="fill_all_the_input">Please fill all the field listed bellow</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="background_image">background image</string>
    <string name="next_button">next_button</string>
    <string name="previous_button">previous_button</string>
    <string name="title_activity_main">Home</string>
    <string name="got_it">Got it</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_setting_string">Setting</string>
    <string name="nav_marks_string">Marks</string>
    <string name="nav_home_string">Home</string>
    <string name="nav_schedule_string">Schedule</string>
    <string name="nav_notes_string">Notes</string>
    <string name="nav_saved_string">Saved</string>
    <string name="nav_log_out_string">Log Out</string>
    <string name="nav_help_feedback_string"><![CDATA[Help & Feedback]]></string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="pager_titles_array_string">
        <item>Home</item>
        <item>Notification</item>
        <item>Mail</item>
    </string-array>
    <string-array name="pager_professor_titles_array_string">
        <item>Home</item>
        <item>Mail</item>
    </string-array>
    <string-array name="levels_array_string">
        <item>1 LMD</item>
        <item>2 LMD</item>
        <item>3 LMD</item>
        <item>MASTER 2</item>
        <item>MASTER 2</item>
    </string-array>
    <string-array name="speciality_array_string">
        <item>Software Engineer</item>
        <item>Computer Engineer</item>
        <item>Network and Telecoms</item>

    </string-array>
    <string-array name="fragment_title_array_string">
        <item>Marks</item>
        <item>Schedule</item>
        <item>Notes</item>
        <item>Saved</item>
    </string-array>
    <string name="text_slide_one_string">Finally we can see displays of university from our phone</string>
    <string name="text_slide_four_string">Communicating with professor is much easier</string>
    <string name="text_slide_two_string">Notification up to your phone</string>
    <string name="text_slide_three_string">Being at the university from your phone</string>
    <string name="exam_string">Exam</string>
    <string name="tp_string">TP</string>
    <string name="td_string">TD</string>
    <string name="title_activity_mail">MailActivity</string>
    <string name="title_activity_message_detail">MessageDetailActivity</string>
    <string name="displays_save_string">Save</string>
    <string name="displays_unsave_string">Unsave</string>
    <string name="display_note_string">Note</string>
    <string name="note_edit_string">Note</string>
    <string name="delete_message_string">Delete message</string>
    <string name="delete_note_string">Delete</string>
    <string name="forward_string">Forward</string>
    <string name="reply_string">Reply</string>
    <string name="title_activity_display_detail">Post</string>
    <string name="title_activity_mark_detail">Mark Detail</string>
    <string name="title_activity_mark">Mark</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_saved">Saved</string>
    <string name="sunday_string">Sun</string>
    <string name="monday_string">Mon</string>
    <string name="tuesday_string">Tue</string>
    <string name="wednesday_string">Wed</string>
    <string name="thursday_string">Thu</string>
    <string name="empty_mail_string">There is no mails</string>
    <string name="mail_empty_description_string">Get started by send new mails, or Tap to refresh</string>
    <string name="no_internet_connection_string">No Internet Connection</string>
    <string name="notification_empty_string">There is no notification</string>
    <string name="mark_empty_string">There is no mark</string>
    <string name="note_empty_string">There is no note</string>
    <string name="get_started_note">Get started by adding a note</string>
    <string name="title_activity_note_edit">NoteEditActivity</string>
    <string name="subject_string">Subject</string>
    <string name="done_menu_string">done</string>
    <string name="delete_all_string">Delete all</string>
    <string name="add_note_string">Add note</string>
    <string name="title_activity_setting">Setting</string>
    <string name="saved_empty_title_string">There is no saved post</string>
    <string name="get_started_saved_string">Get started by saving a post from home screen</string>
    <string name="title_activity_subjects_detail">SubjectsDetailActivity</string>
    <string name="title_activity_subjects">Subjects</string>
    <string name="subject_overview_string">Overview</string>
    <string name="subject_coefficient_string">Coefficient</string>
    <string name="empty_subject_string">There is no subject.</string>
    <string name="tap_to_refresh_string">Tap to refresh from the internet</string>
    <string name="email_does_not_exits_string">This email Does not exists</string>
    <string name="error_in_password_string">Error in Password</string>
    <string name="rest_password_string">The reset link was sent to your email</string>
    <string name="done">done</string>
    <string name="account_created_succes_string">The account was created with success and the confirmation was sent to your email, please check your email to confirm.</string>
    <string name="completed">Completed</string>
    <string name="find_your_account">Find your account</string>
    <string name="refresh">Refresh</string>
    <string name="retry_string">Retry</string>
    <string name="search">Search</string>
    <string name="title_activity_professor_main">ProfessorMainActivity</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="send_string">send</string>
    <string name="save_draft_string">Save draft</string>
    <string name="title_activity_draft">DraftActivity</string>
    <string name="tap_to_refresh_from_the_internet">Tap to refresh from the Internet.</string>
    <string name="there_are_no_displays">There are no Displays.</string>
    <string name="download_all_schedules">Download all schedules</string>
    <string name="cant_find_email">This email does not correspond to any account</string>
    <string name="email_used">This email already used.</string>
    <string name="average_is_incorrect">This average is not correct for this card number</string>
    <string name="card_number_does_not_exist">This card number does not correspond to any student.</string>
    <string name="card_number_is_used">This account of this card number already used.</string>
    <string name="error_io_exception">Error when getting connecting to server, check your connection</string>
    <string name="error_json">Error when getting response from server</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="subject_title">Subject Title</string>
    <string name="subject_utility">Subject Utility</string>
    <string name="course_professor">Course Professor</string>
    <string name="td_professor">TD Professor</string>
    <string name="tp_professor">TP Professor</string>
    <string name="unity_type">Unity type</string>
    <string name="credit">Credit</string>
    <string name="fundamental_unity">Fundamental</string>
    <string name="methodological_unity">Methodological</string>
    <string name="traversal_unity">Traversal</string>
    <string name="discovery_unity">Discovery</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="choose_subject">Choose a Subject</string>
    <string name="choose_level">Choose Level</string>
    <string name="there_is_no_study_today">There is no study today.</string>
    <string name="take_the_opportunity_to_write_new_code">Take the opportunity to write new code .</string>
    <string name="new_note">New Note</string>
    <string name="modify_note">Modify Note</string>
    <string name="delete_string">Delete</string>
    <string name="delete_note_confirmation">Are you sure to delete the note</string>
    <string name="add_something">Please enter something</string>
    <string name="choose_subject_please">Please Choose Subject</string>
    <string name="key_notification_display" translatable="false">displayNotification</string>
    <string name="key_notification_message" translatable="false">messageNotification</string>
    <string name="key_reminder_class" translatable="false">classReminders</string>
    <string name="key_reminder_exam" translatable="false">examReminders</string>
    <string name="key_reminder_consultation" translatable="false">consultationReminders</string>
    <string name="key_feedback">feedback</string>
    <string name="key_privacy">privacy</string>
    <string name="key_term_of_use">termOfUse</string>
    <string name="sign_out">Sign out</string>
    <string name="respect_the_rules_of_communicating">You Should respect the rules of communicating, any thing does not respond to this terms it\'s user will be banned. See our terms and privacy.</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
</resources>