<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2018. This code was created by Younes Charfaoui in the process of Graduation Project for the year of  2018 , which is about creating a platform  for students and professors to help them in the communication and the get known of the university information and so on.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home_string"
    />
    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_note"
        android:title="@string/nav_notes_string" />
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/sign_out" />

</menu>