<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibnkhaldoun.studentside.activities.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:alpha=".5"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/hami" />


    <android.support.v4.view.ViewPager
        android:id="@+id/welcome_view_pager"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="match_parent" />




    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:contentDescription="@string/next_button"
        android:theme="@style/ButtonStylesTwo"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skip"
        android:textColor="@android:color/darker_gray"
        android:contentDescription="@string/skip"
        android:background="@null"/>

</RelativeLayout>
